# oppai

./: .clang-format  .editorconfig  README.txt  meson.build  meson_options.txt
inc/: oppai.h  oppai_const.h.in  types.h
src/: check.c  cli.c  enviroment.c  input.c  log.c  loop.c  main.c  utils.c  worker.c
